--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,13 @@
-body{ background-image: url("../images/black.jpg");}
+body {
+  background-image: url("../images/black.jpg");
+}
 
-#page-wrapper{ 
+#page-wrapper {
 width: 960px;
 margin: 0 auto;
 box-shadow: 0px 4px 8px 2px rgba(0, 0, 0, 1);
-border-radius: 12px 12px 0px 0px; }
+  border-radius: 12px 12px 0px 0px; 
+}
 
 #header {
     margin-top: 40px;
@@ -17,11 +20,13 @@ border-radius: 12px 12px 0px 0px; }
   top:5px;
   font-size: 3em;
   font-family: 'Devonshire', cursive;
-  color: #de583d;
+  color: #E35335;
 }
 
 #header a#logo1 img {
-    margin: 20px 0 20px 20px;
+  margin-top: 20px;
+  margin-left: 20px;
+  margin-bottom: 20px;
   }
   
   #header #toplink {
@@ -29,8 +34,8 @@ border-radius: 12px 12px 0px 0px; }
     position: absolute;
     top: -34px;
     right: 10px;
-    color: #fff;
-    font-size: 1.8rem;
+  color: white;
+  font-size: 1.8em;
   }
   
   #footer {
@@ -40,20 +45,21 @@ border-radius: 12px 12px 0px 0px; }
   }
   
   #content-wrapper {
-    background: url("../images/repeating.png") repeat;
+  background-image: url("../images/repeating.png");
     float: left;
   }
   
   #main-content {
     min-height: 300px;
     width: 715px;
-    margin: 0 30px 0 15px;
+  margin-right: 30px;
     float: left;
+  margin-left: 15px;
   }
   
   h2 strong {
-    font-size: 2rem;
-    font-weight: 700;
+  font-size: 2em;
+  font-weight: 900;
   }
   
   .image-r {
@@ -61,7 +67,7 @@ border-radius: 12px 12px 0px 0px; }
     border: 2px solid blue;
     width: 300px;
     padding: 5px;
-    background-color: #fff;
+  background-color: white;
     margin: 10px 0 10px 20px;
   }
   
@@ -96,11 +102,11 @@ border-radius: 12px 12px 0px 0px; }
     padding: 10px 25px;
     display: block;
     text-decoration: none;
-    color: rgb(218, 217, 217);
+  color: #ccc;
   }
   
   #main-nav ul li a:hover {
-    background: #ccc;
+  background-color: #ccc;
     color: #333;
   }
   
@@ -110,6 +116,6 @@ border-radius: 12px 12px 0px 0px; }
   }
   
   strong {
-    font-weight: 700;
-    font-size: 3rem;
+  font-weight: 900;
+  font-size: 48px;
   }
